log
Thu 09 May 2024 03:18:21 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
b64b108
Thu 09 May 2024 03:38:34 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
497bd31
Thu 09 May 2024 03:40:30 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
07be17b
Thu 09 May 2024 03:41:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
0d0f9c0
Thu 09 May 2024 03:43:00 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
787081a
Thu 09 May 2024 03:43:30 PM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  5|7
total_score: 5/70
aeb023f
Thu 09 May 2024 03:43:46 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
81e1cff
Thu 09 May 2024 03:44:32 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|7
total_score: 5/70
d2ce5aa
Thu 09 May 2024 03:47:36 PM UTC: 
 treemap.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  0|0
fa296eb
Thu 09 May 2024 03:51:19 PM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  11|6
total_score: 15/70
8623e08
Thu 09 May 2024 03:51:38 PM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
e9d5ce9
Thu 09 May 2024 04:07:39 PM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:51: error: expected expression before ‘==’ token
   54 |       if(tree->lower_than(key,current->pair->key))==1)
      |                                                   ^~
treemap.c:54:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   54 |       if(tree->lower_than(key,current->pair->key))==1)
      |       ^~
treemap.c:54:54: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   54 |       if(tree->lower_than(key,current->pair->key))==1)
      |                                                      ^
treemap.c:54:54: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
3c764e8
Thu 09 May 2024 04:07:46 PM UTC: 
 treemap.c | 8 --------
 1 file changed, 8 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:13: error: unused variable ‘current’ [-Werror=unused-variable]
   51 |   TreeNode *current = tree->root;
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8c61eb6
Thu 09 May 2024 04:07:52 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|6
total_score: 15/70
b2e81e7
Sat 11 May 2024 10:47:59 PM UTC: 
 treemap.c | 38 +++++++++++++++++++++++++++++++++++---
 1 file changed, 35 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
5825d43
Sat 11 May 2024 10:56:38 PM UTC: 
 treemap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  15|4
total_score: 25/70
f9ac16e
Sat 11 May 2024 11:31:25 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  16|4
total_score: 30/70
513220f
Sat 11 May 2024 11:35:37 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:116:53: error: expected statement before ‘)’ token
  116 |   else if(node->left != NULL && node->right != NULL))
      |                                                     ^
Compilation failed
c9041e8
Sat 11 May 2024 11:35:49 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
43c0bae
Sat 11 May 2024 11:38:41 PM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  16|4
total_score: 30/70
1f99688
Sat 11 May 2024 11:49:26 PM UTC: 
 treemap.c | 31 ++++++++++++++++++-------------
 1 file changed, 18 insertions(+), 13 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:122:15: error: ‘TreeNode’ has no member named ‘parernt’; did you mean ‘parent’?
  122 |         node->parernt->right = node->left;
      |               ^~~~~~~
      |               parent
Compilation failed
24ed212
Sat 11 May 2024 11:49:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
942de7d
Sun 12 May 2024 12:59:03 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  18|4
total_score: 35/70
53360d8
Sun 12 May 2024 12:59:55 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  18|4
total_score: 35/70
7a37421
Sun 12 May 2024 01:00:45 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  18|4
total_score: 35/70
0dec259
Sun 12 May 2024 01:02:31 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  18|4
total_score: 35/70
1d31a26
Sun 12 May 2024 01:05:29 AM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:191:1: error: control reaches end of non-void function [-Werror=return-type]
  191 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
635ccfb
Sun 12 May 2024 01:06:45 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  23|3
total_score: 50/70
a924c15
